@@ -163,7 +163,7 @@
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Dfile.encoding=${project.build.sourceEncoding} ${argLine}</argLine>
 					<includes>
 						<exclude>**/*ejecutor.java</exclude>
 					</includes>
